CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-24 15:19:07
+lastsearch = 2024-07-24 17:34:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://sv.kthcm.edu.vn/hot/egov/king88 đăng nhập
 [www.vinmec.com]
 match = -231.2%%
 title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận thức ...
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc/
+url = https://www.vinmec.com/vie/bai-viet/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc-vi/
 
 [www.google.com]
 match = -112.5%%
@@ -700,4 +700,14 @@ url = https://support.apple.com/vi-vn/guide/watch/apdec70bfd2d/watchos
 match = 0.0%%
 title = Ho Chi Minh ZIP code
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
+
+[timbus.vn]
+match = -27.3%%
+title = Luồng tuyến
+url = http://timbus.vn/fleets.aspx
+
+[huyenuygocongtay.vn]
+match = -218.8%%
+title = Đoàn thanh niên xã Long Vĩnh tổ chức ra mắt Câu lạc bộ Mai ...
+url = https://huyenuygocongtay.vn/news/tin-tuc-co-so/doan-thanh-nien-xa-long-vinh-to-chuc-ra-mat-cau-lac-bo-mai-chieu-thuy-nu-go-cong-1738.html
 
