--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 17:14:46
+lastsearch = 2024-07-24 17:35:18
 
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Non,_je_ne_regrette_rien
+url = https://en.wikipedia.org/wiki/Jenna_Dewan
 
 [www.marysrosaries.com]
 match = -33.3%%
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -23.8%%
-title = Edith Piaf - Non, Je ne regrette rien
-url = https://www.youtube.com/watch?v=Q3Kvu6Kgp88
+match = -71.4%%
+title = Extreme - More Than Words (Official Music Video)
+url = https://www.youtube.com/watch?v=UrIiLvg58SY
 
 [www.epa.gov]
 match = -19.0%%
@@ -177,9 +177,9 @@ title = Nonalcoholic fatty liver disease - Symptoms and causes
 url = https://www.mayoclinic.org/diseases-conditions/nonalcoholic-fatty-liver-disease/symptoms-causes/syc-20354567
 
 [gs.statcounter.com]
-match = -42.9%%
-title = Mobile Browser Market Share Worldwide
-url = https://gs.statcounter.com/browser-market-share/mobile/worldwide
+match = -76.2%%
+title = Desktop Operating System Market Share Worldwide
+url = https://gs.statcounter.com/os-market-share/desktop/worldwide
 
 [www.nintendo.com]
 match = -123.8%%
@@ -395,4 +395,14 @@ url = https://www.last.fm/music/Edith+Piaf/_/Saving+Private+Ryan:+Tu+Es+Partout
 match = -28.6%%
 title = C_202404641FR.000101.fmx.xml
 url = https://eur-lex.europa.eu/legal-content/FR/TXT/HTML/?uri=OJ:C_202404641
+
+[indicators.ohchr.org]
+match = -11.8%%
+title = - OHCHR Dashboard
+url = https://indicators.ohchr.org/
+
+[www.omnihotels.com]
+match = -85.7%%
+title = Omni Parker House | Hotels in Downtown Boston, MA
+url = https://www.omnihotels.com/hotels/boston-parker-house
 
