--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-24 15:33:31
+lastsearch = 2024-07-24 17:40:11
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
@@ -37,19 +37,19 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = -55.6%%
+title = Bộ ga chun Cotton chống thấm màu đỏ
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-do.html?srsltid=AfmBOordyhTbFjhxpEde6VH3sng3z1rQ_ru0fbkqAo4CG3ahg0rr9C1l
 
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOoq8gL35EdIgGRW68WOrVMCkr91dHFAQDV3WzyEs6F4Zgrij7VBf
 
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
+url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong?srsltid=AfmBOooKUoMuVpOKDsNkWQgnvE1jfFXKdMwqlms9Pcd2NVBmsh-UP5hp
 
 [everonvn.com.vn]
 match = 27.8%%
