--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-24 09:53:22
+lastsearch = 2024-07-24 17:39:35
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,7 +49,7 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOoruoWBOcZ3dNRRbnXLzyhK9H4A4Ns6Pw97YFe1TTl_rBKE3KuYX
 
 [www.lazada.vn]
 match = 10.0%%
