--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-24 16:14:42
+lastsearch = 2024-07-24 17:41:49
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,19 +17,19 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -94.4%%
-title = LNS International Corporation | Houston TX
-url = https://www.facebook.com/lnsus2018/
+match = 33.3%%
+title = NEM CHUA THANH HÓA
+url = https://www.facebook.com/NemChuaHaiAu/posts/𝐄𝐦-𝐱𝐢𝐧-𝐩𝐡𝐞́𝐩-𝐧𝐡𝐚̣̂𝐧-𝐝̵𝐚̣̆𝐭-𝐥𝐢̣𝐜𝐡-𝐍𝐞𝐦-𝐂𝐡𝐮𝐚-𝐀̆𝐧-𝐓𝐞̂́𝐭-𝐃̵𝐢-𝐁𝐢𝐞̂́𝐮-𝟐-𝟑-𝐧𝐠𝐚̀𝐲-𝐧𝐮̛̃𝐚-𝐭/789016583270704/
 
 [thegioinem.com]
-match = -77.8%%
-title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.youtube.com]
-match = -166.7%%
-title = [ENG SUB] Thèm bột chiên, tự làm cách này rất dễ mà siêu ...
-url = https://www.youtube.com/watch?v=q7is9fGsGuw
+match = -144.4%%
+title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
+url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
 
 [www.proz.com]
 match = -183.3%%
