--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-24 09:47:20
+lastsearch = 2024-07-24 17:35:47
 
 [www.sendo.vn]
 match = 0.0%%
@@ -27,14 +27,14 @@ title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
 url = https://thamtretho.com/
 
 [trieuchau.com]
-match = -209.1%%
-title = Thảm Xốp Trải Sàn 1mx1m - Hoạ Tiết Nước Biển
-url = https://trieuchau.com/vi-vn/1057/28773/Tham-Xop-1mx1m/Tham-Xop-Trai-San-1mx1m--Hoa-Tiet-Nuoc-Bien
+match = -200.0%%
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
-match = -136.4%%
-title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
+match = -109.1%%
+title = BỘ THẢM XỐP LÓT TRẢI SÀN CAO CẤP
+url = https://www.lazada.vn/products/bo-tham-xop-lot-trai-san-cao-cap-tham-xop-lot-san-van-go-bo-gom-6-12-18-24-30-36-42-48-tam-tham-trai-san-i377144776.html
 
 [tayphuthuan.com]
 match = -154.5%%
@@ -57,9 +57,9 @@ title = Mua BỘ 18 MIẾNG Thảm Xốp Lót Sàn
 url = https://tiki.vn/bo-18-mieng-tham-xop-lot-san-p205162376.html
 
 [zookeys.pensoft.net]
-match = -436.4%%
-title = A new micropolydesmoid millipede of the genus Eutrichodesmus ...
-url = https://zookeys.pensoft.net/article/57411/list/18/
+match = -63.6%%
+title = Untitled Spreadsheet
+url = https://zookeys.pensoft.net/article/57411/download/excel/21/
 
 [thamxoplotsan.com]
 match = -127.3%%
