--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-24 17:35:58
+lastsearch = 2024-07-24 17:48:16
 
 [shopee.vn]
 match = -95.2%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Thảm-lông-loang-thảm-trải-chân-giường-siêu-m
 [www.lazada.vn]
 match = -76.2%%
 title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
-url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
+url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html?srsltid=AfmBOoqao646w40vmFnQdX1APIBxq_aeBR4GfxSNj_l_TUwIuHVgsPbV
 
 [tiki.vn]
 match = -38.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooJ0_YaHRiRIozPxAMrrdvmKMLkKjkHXH3_jFO-QEH0Z7oQmHhD
 
 [beyours.vn]
 match = 0.0%%
