--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-24 17:38:53
+lastsearch = 2024-07-24 17:46:03
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -240.0%%
-title = Tên lửa chống tăng Kornet Nga gieo ác mộng kinh hoàng cho ...
-url = https://www.youtube.com/watch?v=-1dzl7O_T-o
+match = -106.7%%
+title = 5 THỦ THUẬT LEAD SOLO GUITAR NGẪU HỨNG
+url = https://www.youtube.com/watch?v=wKs5Un5IbaA
 
 [htlight.vn]
 match = -26.7%%
