--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-24 17:33:21
+lastsearch = 2024-07-24 17:50:06
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -100.0%%
+title = Disgusting behavior from SOME nrg fans today in Riot Arena
+url = https://www.reddit.com/r/ValorantCompetitive/comments/1dv9tb0/disgusting_behavior_from_some_nrg_fans_today_in/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
