--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-24 16:19:49
+lastsearch = 2024-07-24 18:10:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOopQHPzw0sL3ymbeOQBuZYjpp09zPI17mSolqnboMNI7xAXpZLiU
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOopkddgTJd-c0gtlBJxEeF_eWhkzeTjkShy5DmDhMJ5YFzA2eS7A
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [chieutruc.info]
 match = -71.4%%
@@ -127,9 +127,9 @@ title = Ban An toàn giao thông tỉnh làm việc với UBND huyện ...
 url = https://baomoi.com/ban-an-toan-giao-thong-tinh-lam-viec-voi-ubnd-huyen-muong-khuong-c49708239.epi
 
 [suckhoedoisong.vn]
-match = -114.3%%
-title = Ngắm Vườn thơ Châu Hương Viên nổi tiếng xứ Huế sau ...
-url = https://suckhoedoisong.vn/ngam-vuon-tho-chau-huong-vien-noi-tieng-xu-hue-sau-hon-1-nam-tu-bo-169240615073042797.htm
+match = -109.5%%
+title = Bác sĩ trẻ hơn 40 lần hiến máu - Mệnh lệnh từ trái tim
+url = https://suckhoedoisong.vn/bac-si-tre-hon-40-lan-hien-mau-169240724154313626.htm
 
 [petrovietnam.petrotimes.vn]
 match = -152.4%%
@@ -450,4 +450,14 @@ url = https://www.instagram.com/minhbeta/?hl=en
 match = -119.0%%
 title = Bản văn chính thức của Đại hội Thánh Thể Quốc tế lần thứ ...
 url = https://tgpsaigon.net/bai-viet/ban-van-chinh-thuc-cua-dai-hoi-thanh-the-quoc-te-lan-thu-53-tai-quito-ecuadortu-8-den-15-9-2024-75184
+
+[biogreen-impexp.fr]
+match = -38.1%%
+title = Môn Thai Mang Ngứa Khi Hậu - BIOGREEN
+url = https://biogreen-impexp.fr/5245903-mang-môn-khi-thai-hậu-ngứa.html
+
+[sienergie.fr]
+match = 0.0%%
+title = Dâm Tả Khiêu Văn
+url = https://sienergie.fr/1907185-khiêu-tả-dâm-văn.html
 
