--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-24 15:44:23
+lastsearch = 2024-07-24 18:11:28
 
 [www.bible.com]
-match = -64.7%%
-title = Matyu 20 | TPIPNG Bible | YouVersion
-url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
+match = -100.0%%
+title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -123.5%%
-title = Thufingte 1-31 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
+match = -111.8%%
+title = Exodus 1-40 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -158.8%%
+title = Matthew 20-22 NIV - The Parable of the Workers in the
+url = https://www.biblegateway.com/passage/?search=Matthew 20-22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
