--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-24 15:23:43
+lastsearch = 2024-07-24 18:16:49
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,9 +17,9 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -135.0%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -115.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -160.0%%
-title = CDT Jake Sorrels successfully defended his senior thesis “ ...
-url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
+match = -140.0%%
+title = Korean Embassy in South Africa 주남아공한국대사관
+url = https://www.facebook.com/KoreanEmbassySouthAfrica/
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -150.0%%
-title = Our Game (ft. Kim Jung Gi) | Anniversary 2019 Mural Time ...
-url = https://www.youtube.com/watch?v=3owI8KRRwaI
+match = -90.0%%
+title = A REPRESENTAÇÃO DOS 7 PECADOS CAPITAIS NOS ...
+url = https://www.youtube.com/watch?v=L7h-gqJa92s
 
 [som.yale.edu]
 match = -110.0%%
@@ -162,9 +162,9 @@ title = Fele annyiba se kerül a "Faker Ahri" szobor, mint a LoL-os ...
 url = https://leetgaming.com/2024/06/12/lol-league-of-legends-faker-skincsomag-ar-figura-cikk/
 
 [www.thespike.gg]
-match = -75.0%%
-title = Nongshim RedForce vs Sin Prisa Gaming | VCL
-url = https://www.thespike.gg/br/match/nongshim-redforce-sin-prisa-gaming/119127
+match = -80.0%%
+title = FENNEL Hotelava - VALORANT Game Changers 2024
+url = https://www.thespike.gg/br/match/fennel-hotelava-reignite-lily/120396
 
 [sensiblepsych.my-free.website]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -155.0%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
