CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-24 17:34:01
+lastsearch = 2024-07-24 18:26:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -602,9 +602,9 @@ title = 8 trường hợp tiếp xúc gần ca bệnh bạch hầu ở Bắc Gia
 url = https://daibieunhandan.vn/suc-khoe/8-truong-hop-tiep-xuc-gan-ca-benh-bach-hau-o-bac-giang-co-ket-qua-am-tinh-i379518/
 
 [m.facebook.com]
-match = -143.8%%
-title = Tràng An Travel - Nắng chiều Lạc Dương, Trung Quốc 🏞️
-url = https://m.facebook.com/story.php/?story_fbid=366749612732298&id=100081917851165
+match = -131.2%%
+title = Mông Tự - Kiến Thuỷ | 𝐂𝐡𝐮̀𝐦 𝐭𝐨𝐮𝐫 𝐡𝐞̀ 𝐠𝐢𝐚́ 𝐜𝐮̛̣𝐜 𝐬𝐨̂́𝐜
+url = https://m.facebook.com/groups/245992163693772/posts/794612542165062/
 
 [mia.vn]
 match = -225.0%%
@@ -710,4 +710,49 @@ url = http://timbus.vn/fleets.aspx
 match = -218.8%%
 title = Đoàn thanh niên xã Long Vĩnh tổ chức ra mắt Câu lạc bộ Mai ...
 url = https://huyenuygocongtay.vn/news/tin-tuc-co-so/doan-thanh-nien-xa-long-vinh-to-chuc-ra-mat-cau-lac-bo-mai-chieu-thuy-nu-go-cong-1738.html
+
+[ancuong.com]
+match = -75.0%%
+title = Domestic
+url = https://ancuong.com/en/contact/he-thong-ban-hang-1/domestic.html
+
+[www.lexisnexis.com]
+match = -156.2%%
+title = Records of the Military Assistance Command Vietnam
+url = http://www.lexisnexis.com/documents/academic/upa_cis/3208_recsmacvpt1.pdf
+
+[www.irs.gov]
+match = -56.2%%
+title = november-2019-990-index.csv
+url = https://www.irs.gov/pub/irs-tege/november-2019-990-index.csv
+
+[partner.hdbank.com.vn]
+match = 6.2%%
+title = Network - HDBank
+url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b409-5b51ef55ea01
+
+[en.wikipedia.org]
+match = -93.8%%
+title = List of high schools in Hanoi, Vietnam
+url = https://en.wikipedia.org/wiki/List_of_high_schools_in_Hanoi,_Vietnam
+
+[bidv.com.vn]
+match = -133.3%%
+title = Sheet2
+url = https://bidv.com.vn/wps/wcm/connect/c134ee41-9574-458f-b39a-6b5fb9d23f2e/List+of+location+registration+KORONAPAY.xlsx?MOD=AJPERES&CVID=noYJGO0
+
+[pulaubidong.wordpress.com]
+match = -200.0%%
+title = The Vietnamese Boat People – Pulau Bidong during 1978-1979
+url = https://pulaubidong.wordpress.com/2008/11/10/my-family-lived-on-pulau-bidong-during-1978-1979/
+
+[nso.com.vn]
+match = 6.2%%
+title = Industrial Parks
+url = https://nso.com.vn/en/n/list/industrial-parks-19
+
+[sotnmt.soctrang.gov.vn]
+match = -225.0%%
+title = Quyết định số 405/QĐ-VPĐK v/v huỷ Giấy chứng nhận quyền ...
+url = https://sotnmt.soctrang.gov.vn/mDefault.aspx?sname=stn&sid=1284&pageid=177&catid=66062&id=389190&catname=Nam-2024&title=Quyet-dinh-so-405-QD-VPDK-v-v-huy-Giay-chung-nhan-quyen-su-dung-dat-so-phat-hanh-AK-902162--do-UBND-huyen-Nga-Nam-ky-cap-cho-ho-ong-Pham-Thanh-Chieu-va-ba-Dinh-Thi-Bay
 
