--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-24 13:47:19
+lastsearch = 2024-07-24 18:24:28
 
 [www.muji.com]
 match = 7.1%%
@@ -130,4 +130,9 @@ url = https://www.linkedin.com/pulse/why-muji-winer-branding-golf-jaetsada
 match = 0.0%%
 title = 
 url = https://www.behindthename.com/name/muji/submitted
+
+[faly.vn]
+match = -150.0%%
+title = Chăn Lông Muji hàng loại 1 Siêu Mềm Mịn - Faly.vn
+url = http://faly.vn/chan-long-muji-hang-loai-1-sieu-mem-min.html
 
