--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-24 16:31:46
+lastsearch = 2024-07-24 18:31:39
 
 [shopee.vn]
 match = -94.7%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -126.3%%
-title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p253468081.html
+match = -110.5%%
+title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu tre
 
 [khodem.vn]
 match = 31.6%%
