--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-24 14:46:09
+lastsearch = 2024-07-24 18:30:57
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -87,9 +87,9 @@ title = Chiếu điều hòa: Bóc mẽ sự thật
 url = https://shoptretho.com.vn/tin-tuc/chieu-dieu-hoa-boc-me-su-that
 
 [www.youtube.com]
-match = -40.0%%
-title = Các chị bán hàng online bảo chiếu điều hòa nằm mát lắm ...
-url = https://www.youtube.com/watch?v=a8BE2eDtn3Y
+match = -26.7%%
+title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
+url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 
 [vtvhyundai.vn]
 match = -6.7%%
@@ -147,7 +147,7 @@ title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
 [dienmaycholon.com]
-match = -20.0%%
-title = Hướng dẫn sử dụng điều khiển điều hòa Panasonic
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-su-dung-dieu-khien-dieu-hoa-panasonic
+match = -36.7%%
+title = Máy lạnh, điều hòa giá rẻ, chính hãng, trả góp 0%%, giao ...
+url = https://dienmaycholon.com/may-lanh
 
