--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-24 18:12:14
+lastsearch = 2024-07-24 18:24:17
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia
 [vinatools.com]
 match = -173.3%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong ...
-url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOopsIwPjnfQyrN14n8Elv7pa_yLkyYcpSF9x3MmrAIk7HK5ICckX
+url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
 match = -166.7%%
