--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-24 15:16:20
+lastsearch = 2024-07-24 18:25:30
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -77.8%%
+title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -22.2%%
-title = Tatana - Nệm Drap Gối Cao Cấp
-url = https://www.facebook.com/tatana.vn/
+match = -83.3%%
+title = Chợ Đông Ba - Nam Cali | Westminster CA
+url = https://www.facebook.com/quanohon/
 
 [voz.vn]
 match = 11.1%%
@@ -82,9 +82,9 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -177.8%%
-title = Đây là cách tạo ra món Bánh Bông Lan xốp mềm béo thơm ...
-url = https://www.youtube.com/watch?v=iS_07jVlezc
+match = -111.1%%
+title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
+url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
 match = -38.9%%
