--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-24 15:38:56
+lastsearch = 2024-07-24 18:47:03
 
 [tiki.vn]
 match = 16.0%%
@@ -27,9 +27,9 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = -60.0%%
-title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
-url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -82,9 +82,9 @@ title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
 url = https://m.facebook.com/groups/867394263291528/posts/7807974442566774/
 
 [tuoitre.vn]
-match = -56.0%%
-title = Trung Quốc nói sẽ trừng phạt người trốn sang Đài Loan
-url = https://tuoitre.vn/trung-quoc-noi-se-trung-phat-nguoi-tron-sang-dai-loan-2024061217194574.htm
+match = -12.0%%
+title = Đài Loan căng mình chờ siêu bão Gaemi
+url = https://tuoitre.vn/dai-loan-cang-minh-cho-sieu-bao-gaemi-20240724173422934.htm
 
 [www.travel.taipei]
 match = 9.5%%
@@ -157,9 +157,9 @@ title = Cẩm nang du lịch Los Angeles cho người mới du lịch Hoa Kỳ
 url = https://goldensmiletravel.com/du-lich-los-angeles
 
 [www.bbc.com]
-match = -80.0%%
-title = Đài Loan tập trận mô phỏng sát thực tế chiến tranh với ...
-url = https://www.bbc.com/vietnamese/articles/cjeewv9v4d0o
+match = -72.0%%
+title = Bà Harris công kích ông Trump, đám đông hô vang 'nhốt ...
+url = https://www.bbc.com/vietnamese/articles/cv2gzrq1kngo
 
 [tinhot.tw]
 match = -76.0%%
@@ -265,4 +265,9 @@ url = https://thethao247.vn/sitemap-article-day-2017-12-05.xml
 match = -48.0%%
 title = Top Hay Mar Loan Nhất · 2024 Phim Dị Kinh Đài 31
 url = https://sashepherdcollege.co.za/86345612-phimsec-đaì-loan.html
+
+[thietbig20.vn]
+match = -52.0%%
+title = Dây hơi lò xo Đài Loan SHPI PU12.8-12 (12 mét, 8x12mm)
+url = https://thietbig20.vn/day-hoi-lo-xo-dai-loan-shpi-pu128-12
 
