--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-24 16:48:37
+lastsearch = 2024-07-24 18:45:18
 
 [www.instagram.com]
 match = -161.5%%
@@ -12,9 +12,9 @@ title = (@katrinacyt) • Instagram photos and videos
 url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -76.9%%
+title = Fanny Chan - Christian Dior Couture
+url = https://hk.linkedin.com/in/fanny-chan-938952bb
 
 [wwd.com]
 match = -253.8%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
