CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-24 18:28:22
+lastsearch = 2024-07-24 19:57:30
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -450,4 +450,9 @@ url = https://www.ainonline.com/aviation-news/air-transport/2023-01-17/tui-train
 match = -200.0%%
 title = TUI
 url = https://gy.linkedin.com/company/tuigroup?trk=products_details_guest_organization_name
+
+[www.prnewswire.com]
+match = -308.3%%
+title = TUI Hotels & Resorts Taps Canary Technologies to Power ...
+url = https://www.prnewswire.com/news-releases/tui-hotels--resorts-taps-canary-technologies-to-power-its-digital-guest-journey-302204723.html
 
