--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-24 18:47:16
+lastsearch = 2024-07-24 20:00:23
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,14 +22,14 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 0.0%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
-url = https://changagoidemsonghong.com/chan-ga-goi-uc05
+match = -28.6%%
+title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
+url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
 
 [flexhouse.vn]
 match = -17.9%%
@@ -200,4 +200,9 @@ url = https://tanmydesign.com/chan-ga-goi/
 match = -21.4%%
 title = Top 25+ bộ chăn ga gối màu trắng đẹp, sang trọng 2023
 url = https://elambo.vn/bo-chan-ga-goi-mau-trang/
+
+[demhong.vn]
+match = 10.7%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC09
+url = https://demhong.vn/chan-ga-goi-song-hong-uc-09/
 
