--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-24 17:15:44
+lastsearch = 2024-07-24 20:03:49
 
 [www.instagram.com]
-match = -6.7%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -33.3%%
+title = Chan Paco Hoi Pak (@paco.chanhp)
+url = https://www.instagram.com/paco.chanhp/?hl=en
 
 [thewoksoflife.com]
 match = -66.7%%
