--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-24 13:23:09
+lastsearch = 2024-07-24 20:01:40
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -23.8%%
-title = Raohe Ẩm Thực Đài | Ho Chi Minh City
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -138.1%%
+title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
+url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -57,14 +57,14 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = -14.3%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 33.3%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [trithucvn.co]
-match = -114.3%%
-title = Bộ Ngoại giao Mỹ và Đài Loan phản ứng về tuyên bố 'phí ...
-url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuyen-bo-phi-bao-ve-cua-ong-trump.html
+match = -123.8%%
+title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
+url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
 
 [xuatnhapcanh.gov.vn]
 match = -85.7%%
@@ -167,9 +167,9 @@ title = đường dây cá độ bóng đá bị bắt|Chơi Cá Cược Online
 url = https://www.hcmulaw.edu.vn/card/2024-07-09-0OSNa1Dcoi trực tiếp vtv6.html
 
 [tuoitre.vn]
-match = -109.5%%
-title = Đài Loan theo dõi sát đợt thử tên lửa mới của Trung Quốc
-url = https://tuoitre.vn/dai-loan-theo-doi-sat-dot-thu-ten-lua-moi-cua-trung-quoc-20240713134043306.htm
+match = -38.1%%
+title = Đài Loan căng mình chờ siêu bão Gaemi
+url = https://tuoitre.vn/dai-loan-cang-minh-cho-sieu-bao-gaemi-20240724173422934.htm
 
 [tramincogroup.com.vn]
 match = -66.7%%
