--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-24 18:16:58
+lastsearch = 2024-07-24 20:00:55
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -587,7 +587,12 @@ title = Khám phá Yellowstone – Tuyệt tác thiên nhiên của nước Mỹ
 url = https://eurotravel.com.vn/kham-pha-yellowstone-tuyet-tac-thien-nhien-cua-nuoc-my/
 
 [amiensaikido.fr]
-match = -150.0%%
-title = Lan Thái Việt Chơi Sex Phim Nam - amiensaikido.fr
-url = https://amiensaikido.fr/990609-việt-lan-thái-nam-sex-chơi-phim.html
+match = -12.5%%
+title = Sex Phạm Clip Băng Băng
+url = https://amiensaikido.fr/4033009-clip-băng-băng-phạm-sex.html
+
+[audioclear.fr]
+match = -125.0%%
+title = Gái Trai Xinh Bar đi Anh đẹp - Audio Clear
+url = https://audioclear.fr/2130507-anh-gái-đi-trai-xinh-bar-đẹp.html
 
