--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-24 17:53:05
+lastsearch = 2024-07-24 19:58:14
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqILoqa&sig=ACfU3U2TwkCLlRFsOtcoDO8Ol6fR9UyRIQ&hl=en&sa=X&ved=2ahUKEwjO9fypwb-HAxU7FFkFHVa_BR4Q6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqJItra&sig=ACfU3U25I02fIdShxRdCQQYU0kfiGKHD8A&hl=en&sa=X&ved=2ahUKEwja3t2m3b-HAxU0HDQIHQw8DkQQ6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
