--- a/images/nem-dreamland-uc-160x190x09/config.ini
+++ b/images/nem-dreamland-uc-160x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x190x09.html
 lastopen = 2024-06-07 01:34:59
 
 [search]
-lastsearch = 2024-07-24 19:22:45
+lastsearch = 2024-07-24 20:00:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -55,4 +55,9 @@ url = https://forum.mattressunderground.com/t/review-of-the-ultimate-dreams-matt
 match = -92.6%%
 title = X-Plane 11 | Magknight 787-9 v1.1 | The 787-9 Down Under ...
 url = https://m.youtube.com/watch?v=6Usm_fhKZiI
+
+[forums.arcade-museum.com]
+match = -40.7%%
+title = SOLD - PARTS - Complete Reactor Control Panel
+url = https://forums.arcade-museum.com/threads/complete-reactor-control-panel.451686/post-3999341
 
