--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-24 14:52:07
+lastsearch = 2024-07-24 20:05:40
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooU6c5llI_-pxT4dJA1NAjVbb4WRtAXlajk7tN9QQ6cVdFLpIcm
 
 [tiki.vn]
 match = -141.2%%
@@ -17,14 +17,14 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
 
 [www.lazada.vn]
-match = -158.8%%
-title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html?srsltid=AfmBOopOtK1e_LT3oK4w8yMXPGVrfdtCk5k9gzNNPiQc-3mHKccSOMBb
 
 [thegioidemviet.vn]
-match = -152.9%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
 match = -111.8%%
@@ -32,8 +32,8 @@ title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
 url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
-match = -200.0%%
-title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách ...
+match = -235.3%%
+title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
 url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
 
 [vn.my-best.com]
@@ -75,4 +75,19 @@ url = https://demtot.vn/tham-nhap-khau
 match = -64.7%%
 title = Thảm Bali họa tiết sang trọng size lớn
 url = https://winmart.onl/tham-bali-hoa-tiet-sang-trong-size-lon-3610.html
+
+[www.responsivedesignchecker.com]
+match = -76.5%%
+title = Issue 2021-W14 Highlights [kZ1Bum]
+url = https://www.responsivedesignchecker.com/checker.php?url=xn----8sbaaj0bk0cches2c.xn--p1ai/YC2rIRafe8fe43z
+
+[muathongminh.vn]
+match = -205.9%%
+title = Lịch sử giá Thảm trang trí decor, thảm trải sàn bali nhiều ...
+url = https://muathongminh.vn/kho-tham-gia-si-tham-trang-tri-decor-tham-trai-san-bali-nhieu-hoa-tiet-chat-sieu-min-khong-bam-bui-p.1__3811727316__211382196
+
+[202.129.46.118]
+match = -35.3%%
+title = アイナジエンド ガンダム [OatLzJ]
+url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=http://xn--80apbkdj.xn--p1ai/AuzbOZcfe43v
 
