CI images update

--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-24 19:25:17
+lastsearch = 2024-07-24 20:27:32
 
 [vinatools.com]
 match = -140.0%%
@@ -27,9 +27,9 @@ title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
 url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
 
 [m.facebook.com]
-match = -233.3%%
-title = mình còn 💥20 bún chả 20 bún thịt 5 bò 8 phần nem nướng ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2394612114252587/
+match = -186.7%%
+title = KTX ĐHQG TP.HCM | SHIP TẬN TOÀ KHU B TỪ 17h tới 23h
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2397403400640125/
 
 [www.expedia.com]
 match = -213.3%%
@@ -187,9 +187,9 @@ title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
 url = https://shopee.vn/product/686340132/24951807725
 
 [www.ministop.vn]
-match = -93.3%%
-title = List of all shops | Shop Location
-url = https://www.ministop.vn/en/ms/all
+match = -26.7%%
+title = Danh sách tất cả cửa hàng
+url = https://www.ministop.vn/ms/all
 
 [austronggroup.com.vn]
 match = -66.7%%
@@ -280,4 +280,14 @@ url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 match = 20.0%%
 title = Tìm quán cà phê
 url = https://www.highlandscoffee.com.vn/vn/he-thong-cua-hang.html
+
+[aws.amazon.com]
+match = -93.3%%
+title = Câu hỏi thường gặp về Amazon EC2 - AWS
+url = https://aws.amazon.com/vi/ec2/faqs/
+
+[sienergie.fr]
+match = 0.0%%
+title = Mông địa Thiên To
+url = https://sienergie.fr/4291517-mông-to-địa-thiên.html
 
