--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-24 17:49:34
+lastsearch = 2024-07-24 20:23:21
 
 [demxanh.com]
 match = -9.1%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorSAY353iBVQogFa-Veo376w9WzBUtnuEYLf-k-5lB5qLOXDZDj
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -145,4 +145,9 @@ url = https://www.bbc.com/vietnamese/articles/cd1dglp433ro
 match = 12.1%%
 title = TIẾP CẬN VÀ ĐIỀU TRỊ TOÀN DIỆN NGỦ NGÁY ...
 url = https://www.fvhospital.com/tin-tuc/tiep-can-va-dieu-tri-toan-dien-ngu-ngay-va-ngung-tho-khi-ngu-hoi-thao-quan-trong-khoi-dau-cho-chien-luoc-mang-y-hoc-singapore-den-viet-nam-cua-benh-vien-fv/
+
+[chieutrucsaigon.com]
+match = 18.2%%
+title = CÁCH TỰ SỬA CHIẾU TRÚC NẾU BỊ VỠ HẠT
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cach-tu-sua-chieu-truc-neu-bi-vo-hat-99.html
 
