--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-24 18:13:50
+lastsearch = 2024-07-24 20:22:16
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVLI3s0a&sig=ACfU3U0s0Vmv3Vc7-XLpt6IMisKzaRrE2A&hl=en&sa=X&ved=2ahUKEwihp9b7xb-HAxWFDEQIHY4ED1AQ6AF6BAg-EAM
+match = -223.5%%
+title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiUYHsF_E&sig=ACfU3U0Gb2IJ454morqSDz0O3U9N6IPdhw&hl=en&sa=X&ved=2ahUKEwjkkfDV4r-HAxVwM1kFHaOQAtUQ6AF6BAgcEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
