--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-24 17:51:45
+lastsearch = 2024-07-24 20:25:46
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn chiếu điểm HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -120.0%%
+title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
