--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-24 16:28:56
+lastsearch = 2024-07-24 20:25:01
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
-url = https://www.youtube.com/watch?v=St3S4ilkoIY
+match = -119.0%%
+title = 3 Ngày 2 Đêm Du Lịch 1 SAO vs 10 SAO - Tập 1: Thử Thách ...
+url = https://www.youtube.com/watch?v=SQm6BZvNrig
 
 [liontrip.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -85.7%%
-title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
-url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
+match = -81.0%%
+title = Cáp treo Vũng Tàu - đường lên tiên cảnh Hồ Mây Park
+url = https://haivan.com/diem-den/Vung-tau/cap-treo-vung-tau-duong-len-tien-canh-ho-may-park
 
 [lockernlock.vn]
 match = -71.4%%
