CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-24 16:47:05
+lastsearch = 2024-07-24 20:33:57
 
 [tiki.vn]
 match = -47.6%%
@@ -113,8 +113,8 @@ url = https://www.nguoi-viet.com/binh-luan/an-com-dai-loan-tho-ma-trung-cong/
 
 [trithucvn.co]
 match = -123.8%%
-title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
-url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
+title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
+url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
 
 [www.vietnamplus.vn]
 match = -119.0%%
