--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-24 18:13:16
+lastsearch = 2024-07-24 20:36:03
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorbi_FEDBQe6ofhlqcE-2wJQ_9m0f4Isodqdezik-2dgl4u43Mf
 
 [tiki.vn]
 match = -39.3%%
