--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-24 16:21:07
+lastsearch = 2024-07-24 20:35:28
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -42,9 +42,9 @@ title = I am a 19-year-old male. My chest size is 38, waist 36 bicep ...
 url = https://www.quora.com/I-am-a-19-year-old-male-My-chest-size-is-38-waist-36-bicep-12-weight-73-kg-and-BMI-23-What-would-I-have-to-do-to-get-to-a-32-waist
 
 [books.google.com]
-match = -307.1%%
-title = Lexicon Aethiopico-Latinum ... Accessit Authoris Grammatica, ...
-url = https://books.google.com/books?id=8etMAAAAcAAJ&pg=PA9&lpg=PA9&dq=man+re+xanh+16&source=bl&ots=Wr-Eq4o9Xq&sig=ACfU3U2HUtjPwnmhH35dsW566EvB2ymJkQ&hl=en&sa=X&ved=2ahUKEwi2neXB3rqHAxX2H0QIHd10AowQ6AF6BAgbEAM
+match = -264.3%%
+title = The Engineer - Volume 39 - Page 249 - Google Books Result
+url = https://books.google.com/books?id=_pckfCJP7cEC&pg=PA249&lpg=PA249&dq=man+re+xanh+16&source=bl&ots=kok2uaULnS&sig=ACfU3U0d_4DlCV3ZKXky_lQ1rOlTVf_n6Q&hl=en&sa=X&ved=2ahUKEwjw8vfP5b-HAxUlFVkFHR_dDjUQ6AF6BAgbEAM
 
 [mobilecity.vn]
 match = -207.1%%
@@ -227,9 +227,9 @@ title = How Blocking Blue Light at Night Helps You Sleep
 url = https://www.healthline.com/nutrition/block-blue-light-to-sleep-better
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -42.9%%
+title = Chào Mừng Quý Vị Đến Hoa Kỳ
+url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
 
 [bluebottlecoffee.com]
 match = -221.4%%
