--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-24 18:27:04
+lastsearch = 2024-07-24 20:40:35
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -105,4 +105,9 @@ url = https://www.liena.com.vn/kich-thuoc-giuong-ngu-tieu-chuan
 match = 11.8%%
 title = Giường gấp có đệm
 url = https://hanhtinhxanh.com.vn/giuong-gap-co-dem.html
+
+[www.lazada.vn]
+match = -36.4%%
+title = 1 tấm ga trải giường Thẩm mỹ viện trơn ...
+url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-tron-tam-ga-trai-giuong-than-thien-voi-da-cham-mem-mai-chong-co-mat-xa-spa-cokhong-co-lo-i2435955728.html
 
