--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-24 18:45:18
+lastsearch = 2024-07-24 20:33:22
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -76.9%%
-title = Fanny Chan - Christian Dior Couture
-url = https://hk.linkedin.com/in/fanny-chan-938952bb
+match = -276.9%%
+title = Chow hoi ting Chow - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
 match = -253.8%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = -11.1%%
-title = Fiona Sit
-url = https://en.wikipedia.org/wiki/Fiona_Sit
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Catherine_Dior
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -152,8 +152,8 @@ title = Get To Know The 15 Biggest Art Collectors In Hong Kong
 url = https://www.tatlerasia.com/lifestyle/arts/hk-get-to-know-the-15-biggest-art-collectors-in-hong-kong
 
 [www.dailymail.co.uk]
-match = -230.8%%
-title = Ex showbiz reporter becomes the richest woman ...
+match = -284.6%%
+title = Ex showbiz reporter becomes the richest woman in Hong ...
 url = https://www.dailymail.co.uk/news/article-4275540/Ex-showbiz-reporter-richest-woman-Hong-Kong.html
 
 [m.facebook.com]
