--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-24 17:33:12
+lastsearch = 2024-07-24 20:35:10
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,14 +12,14 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = -10.7%%
-title = Hướng dẫn chiếu đèn điều trị vàng da sơ sinh
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/huong-dan-chieu-den-dieu-tri-vang-da-so-sinh/
+match = 0.0%%
+title = Chiếu đèn vàng da 15 phút có hiệu quả không?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi/
 
 [www.hotdeal.vn]
-match = -32.1%%
-title = Madina Beauty & Academy - Cấy Tảo/ Hồng Sâm/ Ủ Trắng
-url = https://www.hotdeal.vn/ho-chi-minh/cham-soc-da-mat/madina-beauty-academy-cay-tao-hong-sam-u-trang-lan-kim-363884.html
+match = -25.0%%
+title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
+url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html?srsltid=AfmBOopfwywX67yobU5Wo6kGSTMRnyCmS4WL7CRzmBpABqdxuVAqm6EJ
 
 [www.youtube.com]
 match = -60.7%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -17.9%%
+title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
