--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-24 20:22:29
+lastsearch = 2024-07-24 20:39:38
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
 match = -16.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -52.0%%
-title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
-url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
+match = -84.0%%
+title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
+url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
 
 [www.klook.com]
 match = -48.0%%
