--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-24 18:29:39
+lastsearch = 2024-07-24 20:39:16
 
 [demxanh.com]
-match = -135.3%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -17.6%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [dem24h.vn]
 match = -29.4%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt đen 1.2x1.9m
 url = https://demre.com.vn/chieu-truc-hat-den-1-2x1-9m
 
 [shopee.vn]
-match = -135.3%%
-title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
-url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
+match = -70.6%%
+title = Chiếu trúc hạt đen không viền hàng bền , đẹp
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-hàng-bền-đẹp-i.270303342.8319885845
 
 [changagoidemdep.vn]
 match = 0.0%%
@@ -48,8 +48,8 @@ url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [chieutrelanlan.com]
 match = -58.8%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 120x190cm
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-120x190cm-35.html
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [chieu.com.vn]
 match = 41.2%%
