--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-24 15:49:28
+lastsearch = 2024-07-24 20:37:38
 
 [screenrant.com]
 match = 0.0%%
@@ -12,8 +12,8 @@ title =
 url = https://screenrant.com/use-green-screen-feature-youtube-shorts-how/
 
 [www.facebook.com]
-match = -235.7%%
-title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ...
+match = -178.6%%
+title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -7.1%%
-title = The Guardian (2006)
-url = https://www.imdb.com/title/tt0406816/
+match = 7.1%%
+title = The Mask (1994)
+url = https://www.imdb.com/title/tt0110475/
 
 [www.boundless.com]
 match = -128.6%%
