--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-24 17:36:09
+lastsearch = 2024-07-24 20:37:51
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+match = 5.6%%
+title = Vỏ gối kê xoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
