CI images update

--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-24 16:30:53
+lastsearch = 2024-07-24 20:46:41
 
 [demxanh.com]
 match = -131.6%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOorP15cvA6CfhXb4C29RZ-CQFVprb5TonreYuTOyMY9nRbSHY6gx
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
