--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 17:35:18
+lastsearch = 2024-07-24 20:45:13
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -147.6%%
-title = The Common Law Procedure Act (15 and 16 Vict. Cap. 76), with ...
-url = https://books.google.com/books?id=Rd65o39JZoAC&pg=PR41-IA1&lpg=PR41-IA1&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ni5C_cVFoA&sig=ACfU3U0Wfh1wwx8NRWtsgRsBKybnwMxJ5w&hl=en&sa=X&ved=2ahUKEwihyuLhuL-HAxVBFVkFHbB7CwMQ6AF6BAhLEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw5Euoj&sig=ACfU3U3NP-TUSR5kBeio8TiHRfn8c3E21w&hl=en&sa=X&ved=2ahUKEwj6ttzm57-HAxWJM9AFHRFfAI0Q6AF6BAg0EAM
 
 [www.diepxuan.com]
 match = -81.0%%
