--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-24 19:24:57
+lastsearch = 2024-07-24 20:46:52
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -23,8 +23,8 @@ url = https://everonhanoi.com.vn/tam-trai-topper
 
 [everonhn.com.vn]
 match = 68.2%%
-title = Tấm trải tiện ích Everon
-url = https://everonhn.com.vn/tam-trai-tien-ich-everon
+title = Tấm trải đa năng Everon
+url = https://everonhn.com.vn/tam-trai-da-nang-everon
 
 [everonvn.com.vn]
 match = 18.2%%
@@ -32,9 +32,9 @@ title = Bảng giá bán Tấm topper Everon AVIV
 url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
 
 [everon.com]
-match = 47.1%%
-title = Tấm trải - Topper
-url = https://everon.com/danh-muc-san-pham/tam-trai-topper
+match = -113.6%%
+title = Bảng giá của 5 loại topper trải sàn đa năng, cao cấp nhất ...
+url = https://everon.com/tin-san-pham/topper-trai-san-n256.html
 
 [everonthaiha.com]
 match = 47.1%%
@@ -52,9 +52,9 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -68.2%%
-title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
-url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
+match = -54.5%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
+url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [dailyeveron.vn]
 match = -45.5%%
@@ -63,8 +63,8 @@ url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 68.2%%
-title = Tấm Trải Đa Năng Everon
-url = https://everon.online/products/tam-trai-da-nang-everon-1
+title = Tấm Trải Tiện Ích Everon
+url = https://everon.online/products/tam-trai-tien-ich-7
 
 [everon.com.vn]
 match = -63.6%%
