CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-24 19:27:36
+lastsearch = 2024-07-24 21:32:30
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -222,9 +222,9 @@ title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú .
 url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-d39880.html
 
 [znews.vn]
-match = -37.5%%
-title = 8 cầu thủ rời MU - Thể thao
-url = https://znews.vn/8-cau-thu-roi-mu-post1487807.html
+match = -156.2%%
+title = U23 Argentina nhận cú sốc trước Morocco - Thể thao
+url = https://znews.vn/u23-argentina-nhan-cu-soc-truoc-morocco-post1488112.html
 
 [www.google.com]
 match = -112.5%%
@@ -245,4 +245,9 @@ url = https://www.bachhoaxanh.com/kinh-nghiem-hay/cay-lac-cay-coi-la-cay-gi-dac-
 match = -68.8%%
 title = Chín Khi Thì Và Lên Củ Nổi Năng Trên
 url = https://africatrailers.co.za/32116373-xem-anh-set-nươc-nga-ko-che-tư-sương-nưng-lôn-qua-tim-trai-chat-set-thu-dăm.html
+
+[caobangtv.vn]
+match = -168.8%%
+title = Huyện Bảo Lạc thăm, tặng quà các gia đình chính sách
+url = http://caobangtv.vn/tin-tuc-n75384/huyen-bao-lac-tham-tang-qua-cac-gia-dinh-chinh-sach.html
 
