CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-24 19:24:23
+lastsearch = 2024-07-24 21:52:44
 
 [www.facebook.com]
 match = -182.4%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -8.3%%
-title = Andy Futreal
-url = https://faculty.mdanderson.org/profiles/andrew_futreal.html
+match = -17.6%%
+title = Philip L. Lorenzi, Ph.D.
+url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -188.2%%
+title = Immunological memory to SARS-CoV-2 assessed for up to ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7805444/
 
 [books.google.com]
 match = -7.7%%
@@ -255,4 +255,9 @@ url = https://profiles.umassmed.edu/display/129943
 match = -182.4%%
 title = Urinary, Circulating, and Tissue Biomonitoring Studies ...
 url = https://ehp.niehs.nih.gov/0901716
+
+[thesweetestdew.com]
+match = -29.4%%
+title = Mao Feng Mondays #3: Da Gu Yun
+url = https://thesweetestdew.com/2019/04/12/mao-feng-mondays-3-da-gu-yun/
 
