--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-07-24 17:35:07
+lastsearch = 2024-07-24 21:46:00
 
 [dreamland.vn]
 match = 7.5%%
@@ -18,8 +18,8 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 
 [demluxury.com.vn]
 match = 31.6%%
-title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+title = Bộ chăn ga gối Cotton MOC 01 Dreamland
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-01-dreamland/?srsltid=AfmBOor9-P41YZ_ehm6xT1ywLlib3NmzUkTDVFCc8rI_y92L2fMsPQu4
 
 [www.facebook.com]
 match = -8.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/Dreamland.com.vn/
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html?srsltid=AfmBOooJFWXFozCVb9ieUtfcc0WcqEU3aMsKxGxCiLxueoN-LgFusxNM
 
 [demdreamland.vn]
 match = 31.0%%
