--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-24 21:33:25
+lastsearch = 2024-07-24 21:52:33
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -214,7 +214,7 @@ url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-la
 [www.lazada.vn]
 match = -168.8%%
 title = [HÀNG DÀY ĐẸP] Chiếu lác nhựa siêu bền chắc, dễ giặt ...
-url = https://www.lazada.vn/products/hang-day-dep-chieu-lac-nhua-sieu-ben-chac-de-giat-gap-gon-chieu-nhua-day-kich-thuoc-1m6x2m-hang-viet-nam-cao-cap_hcm-nemtot-bedding-i1775759368.html
+url = https://www.lazada.vn/products/hang-day-dep-chieu-lac-nhua-sieu-ben-chac-de-giat-gap-gon-chieu-nhua-day-kich-thuoc-1m6x2m-hang-viet-nam-cao-cap_hcm-nemtot-bedding-i1775759368.html?srsltid=AfmBOoo5lmJwbmTCZLmAl9Jw_qJ1hCUBnvjQPfNqdAy581r9uHMTtTCz
 
 [vtcnews.vn]
 match = -193.8%%
