--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-24 19:58:14
+lastsearch = 2024-07-24 21:46:22
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqJItra&sig=ACfU3U25I02fIdShxRdCQQYU0kfiGKHD8A&hl=en&sa=X&ved=2ahUKEwja3t2m3b-HAxU0HDQIHQw8DkQQ6AF6BAgWEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqKFoq7&sig=ACfU3U1VlZvs5Sfhf0jENKsqjHDz06Fy8w&hl=en&sa=X&ved=2ahUKEwi0hai89b-HAxXMDDQIHTZeAM8Q6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoqn6DR11g7j4z49t5zf7A7_Im7SsXHMzAcRmPPYY24aYdABojqm
 
 [hopkinssports.com]
 match = -100.0%%
