CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-24 21:48:24
+lastsearch = 2024-07-24 22:21:54
 
 [shopee.vn]
 match = 7.4%%
@@ -164,7 +164,7 @@ url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOop7HYD-gzqiVXwcS-RyqCNp4OMBCgOUsVk79iVhOskjzasHWQrR
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [dogiasi.net]
 match = -55.6%%
