--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-24 16:19:16
+lastsearch = 2024-07-24 22:14:46
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmnd64iW&sig=ACfU3U0IQzZ6F4kUz5HF33F3bawoFWvVBg&hl=en&sa=X&ved=2ahUKEwjdue-trL-HAxW0C3kGHfCYA4EQ6AF6BAgXEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5ErDx93&sig=ACfU3U3nhCRTmPeQYA__zUg6bQzYeHbzaQ&hl=en&sa=X&ved=2ahUKEwjw--To-7-HAxWjGFkFHfxTA10Q6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
