--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-24 18:15:59
+lastsearch = 2024-07-24 22:21:16
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -44.0%%
 title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOoqVAP7jGWrheUiqTs8bd8th8NZbFJDW_li7kgGiyDkkRDh3SnWd
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
 
 [khodem.vn]
 match = 24.0%%
@@ -114,7 +114,7 @@ url = https://demeverhome.com/san-pham/ruot-goi/
 [thegioidemonline.com]
 match = -56.0%%
 title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
-url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html?srsltid=AfmBOoqJPv7UHgtrdcieOMZ5PHbr7gpniHU_FJ3ICY4-iIi9Qr_LB8rd
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html
 
 [thegioidemdep.com]
 match = -24.0%%
