--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-24 18:28:43
+lastsearch = 2024-07-24 22:17:18
 
 [shopee.vn]
-match = -95.2%%
-title = Thảm lông loang - thảm trải chân giường siêu mịn khổ ...
-url = https://shopee.vn/Thảm-lông-loang-thảm-trải-chân-giường-siêu-mịn-khổ-M6X2M-1mx1m6-80cmx2m-50x1m6-nhập-khẩu-loại-1-i.120420833.4524916116
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -76.2%%
 title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
-url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
+url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html?srsltid=AfmBOorUUmkgLYjCE7PfbzOHpwLmmkGSIzuXWzOB7JdUDpcv-5x65VlT
 
 [tiki.vn]
 match = -38.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOoogaITc-x6BAibL8geEGK7sjsjajr1kln_GudQ5MDRqz2ofCrwv
 
 [beyours.vn]
 match = 0.0%%
