--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-24 18:31:39
+lastsearch = 2024-07-24 22:15:24
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -136.8%%
-title = Nhạc Thiếu Nhi Vui Nhộn Bé Đến Khu Vui Chơi Thiếu Nhi ...
-url = https://www.youtube.com/watch?v=1kfm-HBh_-g
+match = -157.9%%
+title = Chúc Mừng Sinh Nhật - Happy Birthday, Nhạc Thiếu Nhi Chúc ...
+url = https://www.youtube.com/watch?v=GLi1fzFx4ho
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -112,9 +112,9 @@ title = Chiếu Trẻ Em - Công ty TNHH Sản xuất và thương mại H&T
 url = https://huongtruc.com/chi-tiet/chieu-tre-em
 
 [chieutruc.info]
-match = -115.8%%
-title = Giá chiếu trúc tre Việt Nam năm 2024 - Chieutruc.inFo
-url = https://chieutruc.info/gia-chieu-truc-tre-viet-nam-2024/
+match = -68.4%%
+title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
+url = https://chieutruc.info/chieu-tam-ht/
 
 [shoptretho.com.vn]
 match = -126.3%%
