--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-24 21:38:41
+lastsearch = 2024-07-24 22:13:59
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -193.8%%
+title = Trống lục lạc kiêm gặm nướu Monona, trống bỏi cực yêu ...
+url = https://shopee.vn/Trống-lục-lạc-kiêm-gặm-nướu-Monona-trống-bỏi-cực-yêu-cho-bé-Baby-Born-shop-i.270816507.17099687990
 
 [www.thegioididong.com]
 match = -181.2%%
@@ -114,7 +114,7 @@ url = https://tuoitre.vn/anh-hung-khong-ao-choang-vach-tran-chieu-tro-ban-xe-toy
 [books.google.com]
 match = -218.8%%
 title = Northern Vietnam: Official Standard Names Approved by the ...
-url = https://books.google.com/books?id=9OJle8CiBVQC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+14&source=bl&ots=ymQ_lh6mn2&sig=ACfU3U2dnYh2nwr4j3mVQuKwM0v-pq9EKg&hl=en&sa=X&ved=2ahUKEwiy0MW0obyHAxWxlYkEHWv2BBEQ6AF6BAgjEAM
+url = https://books.google.com/books?id=9OJle8CiBVQC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+14&source=bl&ots=ymQ_mk4foW&sig=ACfU3U01Bo8DnedJXQby0Nb7YtfFMTaB6g&hl=en&sa=X&ved=2ahUKEwjYrMPS-7-HAxX8FVkFHZuWBT4Q6AF6BAggEAM
 
 [moon.vn]
 match = -206.2%%
