--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-24 20:01:49
+lastsearch = 2024-07-24 22:18:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -610,4 +610,9 @@ url = https://en.theorychina.org.cn/c/2024-07-22/1506789.shtml
 match = -109.5%%
 title = CopenPay: Đan Mạch tặng thưởng du khách tham gia bảo ...
 url = https://www.rfi.fr/vi/tổng-hợp/20240722-copenpay-đan-mạch-tặng-thưởng-du-khách-tham-gia-bảo-vệ-môi-trường
+
+[biogreen-impexp.fr]
+match = -38.1%%
+title = Cầu Chạy Dâm - Sex Karaoke Nam Việt
+url = https://biogreen-impexp.fr/5698170-chạy-cầu-dâm.html
 
