--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-24 13:44:08
+lastsearch = 2024-07-24 22:21:42
 
 [shopee.vn]
-match = 32.0%%
-title = Màn mùng chụp tự bung đỉnh vuông Mộc Chi
-url = https://shopee.vn/Màn-mùng-chụp-tự-bung-đỉnh-vuông-Mộc-Chi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.308360882.15394517998
+match = 48.0%%
+title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
+url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
 
 [munghoangphat.com]
-match = -36.0%%
-title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
-url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
-match = 16.0%%
-title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
-url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
+match = -40.0%%
+title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
+url = https://manthutrang.com/
 
 [www.diepxuan.com]
 match = 100.0%%
