--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-24 20:05:40
+lastsearch = 2024-07-24 22:18:39
 
 [demxanh.com]
 match = -41.2%%
@@ -19,12 +19,12 @@ url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p381
 [www.lazada.vn]
 match = -135.3%%
 title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
-url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html?srsltid=AfmBOopOtK1e_LT3oK4w8yMXPGVrfdtCk5k9gzNNPiQc-3mHKccSOMBb
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -182.4%%
-title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
+match = -152.9%%
+title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
 
 [sammas.vn]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
 url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
-match = -235.3%%
-title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
-url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
+match = -200.0%%
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [vn.my-best.com]
 match = -176.5%%
