CI images update

--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-24 17:53:29
+lastsearch = 2024-07-24 22:46:12
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -350.0%%
+title = When is Ren/[REDACTED] birthday? – @14dayswithyou ...
+url = https://www.tumblr.com/14dayswithyou/693943503681732608/when-is-renredacted-birthday
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
+title = 14 Days With You by cutiesai - itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
@@ -164,7 +164,7 @@ url = https://www.instagram.com/ren.el.king/?hl=en
 [www.researchgate.net]
 match = 0.0%%
 title = 
-url = https://www.researchgate.net/figure/The-five-Shu-points-of-the-12-meridians_tbl3_263665806
+url = https://www.researchgate.net/figure/Locations-of-Acupoints-CV14-Juque-on-the-anterior-meridian-line-of-the-upper_fig3_346516472
 
 [gretel-lane.myshopify.com]
 match = -120.0%%
