--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-24 20:20:39
+lastsearch = 2024-07-24 22:44:25
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
-url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
+match = -43.5%%
+title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
+url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
 
 [chuyenhangviet.com]
 match = -43.5%%
