--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-24 20:03:29
+lastsearch = 2024-07-24 22:47:20
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = 64.7%%
-title = Ruột gối ép hơi Korea
-url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
+match = -105.9%%
+title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
+url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
 
 [demxanh.com]
 match = -135.3%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOop8vX69AON96SjpJVtQZiHpjM1j2RTf0cIat4GyYjY2_bVLAwto
 
 [www.hotdeal.vn]
 match = -111.8%%
